--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <title>Tyche</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/custom.css">
-  <link rel="stylesheet" href="css/angular-timeline-animations.css">
-  <link rel="stylesheet" href="css/angular-timeline-bootstrap.css">
-  <link rel="stylesheet" href="css/angular-timeline.css">
-
+  <link rel="stylesheet" media="all" href="css/bootstrap.min.css">
+  <link rel="stylesheet" media="all" href="css/custom.css">
+  <link rel="stylesheet" media="all" href="css/angular-timeline-animations.css">
+  <link rel="stylesheet" media="all" href="css/angular-timeline-bootstrap.css">
+  <link rel="stylesheet" media="all" href="css/angular-timeline.css">
   <script src="js/jquery.min.js"></script>
+  <script src="js/html2canvas.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/angular.min.js"></script>
   <script src="js/angular-timeline.js"></script>
@@ -25,41 +25,41 @@
    </div>
 </div>
     <div class="container">
-    	<div class="col-md-9">
-			<H2>Luv SINGH <small><br>Linux and Web full stack developer</small></H2>
+    	<div class="col-xs-9">
+			<H2 ng-click="pageImage()">Luv SINGH <small><br>Linux &nbsp and Web full stack developer</small></H2>
 		</div>
-    	<div class="col-md-3">
+    	<div class="col-xs-3">
 			<H2>CALL ME</H2>
 		</div>
 	<div class="col-xs-12" style="height:50px;"></div>
 	</div>
     <div class="container">
-	    <div class="col-md-4">
+	    <div class="col-xs-4">
 	    	<div class="nopadding">
       			<div>
         			<table class="table bordered striped">
         				<caption>PERSONAL</caption>
 				        <tr>
-				        	<td class="col-md-1 text-center">
+				        	<td class="col-xs-1 text-center">
 				        		<p><span class="glyphicon glyphicon-envelope gi-2x"></span></p>
 				        	</td>
-				            <td class="col-md-3">Luv Singh</td>
+				            <td class="col-xs-3">Luv Singh</td>
 				        </tr>
 			        </table>
 
         			<table class="table bordered striped">
         			<caption>WORK EXPERIENCE</caption>
 				        <tr>
-				        	<td class="col-md-1 text-center">
+				        	<td class="col-xs-1 text-center">
 				        		Total
 				        	</td>
-				            <td class="col-md-3">6 years</td>
+				            <td class="col-xs-3">6 years</td>
 				        </tr>
 				        <tr>
-				        	<td class="col-md-1 text-center">
+				        	<td class="col-xs-1 text-center">
 				        		Currently
 				        	</td>
-				            <td class="col-md-3"> Team Lead</td>
+				            <td class="col-xs-3"> Team Lead</td>
 				        </tr>
 
 			        </table>
@@ -67,10 +67,10 @@
         			<table class="table bordered striped">
         				<caption>SKILLS</caption>
 				        <tr>
-				        	<td class="col-md-1 text-center">
+				        	<td class="col-xs-1 text-center">
 				        		Python
 				        	</td>
-				            <td class="col-md-3">
+				            <td class="col-xs-3">
 				            	 <div class="progress">
 									<div class="progress-bar" role="progressbar" aria-valuenow="70"
 									  aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -85,7 +85,7 @@
 	  	</div>
 
 	  	<!-- TWO -->
-	  	<div class="col-md-5">
+	  	<div class="col-xs-5">
 	  		<timeline>
 		        <timeline-event ng-repeat="event in events" side="right">
 		          <timeline-badge class="{{event.badgeClass}}">
@@ -103,7 +103,7 @@
 
 
 	  	</div>
-	  	<div class="col-md-3" style="background-color: red;">
+	  	<div class="col-xs-3" style="background-color: red;">
 	  		three
 	  	</div>
 	</div>
