--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" media="all" href="css/angular-timeline-animations.css">
   <link rel="stylesheet" media="all" href="css/angular-timeline-bootstrap.css">
   <link rel="stylesheet" media="all" href="css/angular-timeline.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <script src="js/jquery.min.js"></script>
   <script src="js/html2canvas.js"></script>
   <script src="js/bootstrap.min.js"></script>
@@ -25,65 +26,20 @@
    </div>
 </div>
     <div class="container">
-    	<div class="col-xs-9">
-			<H2 ng-click="pageImage()">Luv SINGH <small><br>Linux &nbsp and Web full stack developer</small></H2>
+	    	<div class="col-xs-9">
+				<H2 ng-click="pageImage()">Luv SINGH <small><br>Linux and Web full stack developer</small></H2>
+			</div>
+	    	<div class="col-xs-3 blueback">
+			</div>
+
+		<div class="col-xs-9" style="height:20px;">
 		</div>
-    	<div class="col-xs-3">
-			<H2>CALL ME</H2>
+		<div class="col-xs-3 blueback" style="height:20px;">
 		</div>
-	<div class="col-xs-12" style="height:50px;"></div>
 	</div>
     <div class="container">
-	    <div class="col-xs-4">
-	    	<div class="nopadding">
-      			<div>
-        			<table class="table bordered striped">
-        				<caption>PERSONAL</caption>
-				        <tr>
-				        	<td class="col-xs-1 text-center">
-				        		<p><span class="glyphicon glyphicon-envelope gi-2x"></span></p>
-				        	</td>
-				            <td class="col-xs-3">Luv Singh</td>
-				        </tr>
-			        </table>
-
-        			<table class="table bordered striped">
-        			<caption>WORK EXPERIENCE</caption>
-				        <tr>
-				        	<td class="col-xs-1 text-center">
-				        		Total
-				        	</td>
-				            <td class="col-xs-3">6 years</td>
-				        </tr>
-				        <tr>
-				        	<td class="col-xs-1 text-center">
-				        		Currently
-				        	</td>
-				            <td class="col-xs-3"> Team Lead</td>
-				        </tr>
-
-			        </table>
-
-        			<table class="table bordered striped">
-        				<caption>SKILLS</caption>
-				        <tr>
-				        	<td class="col-xs-1 text-center">
-				        		Python
-				        	</td>
-				            <td class="col-xs-3">
-				            	 <div class="progress">
-									<div class="progress-bar" role="progressbar" aria-valuenow="70"
-									  aria-valuemin="0" aria-valuemax="100" style="width:70%">
-									</div>
-								</div>
-				            </td>
-				        </tr>
-			        </table>
-
-      			</div>
-    		</div>
-	  	</div>
-
+    	<div ng-include="'fragments/info.html'">
+    	</div>
 	  	<!-- TWO -->
 	  	<div class="col-xs-5">
 	  		<timeline>
@@ -93,17 +49,18 @@
 		            <span>2001</span>
 		          </timeline-badge>
 		          <timeline-panel class="{{event.badgeClass}}">
-		            <timeline-heading>
+		            <timeline-heading class="singleline">
 		              <h4>{{event.title}}</h4>
 		            </timeline-heading>
-		            <p>{{event.content}}</p>
+		            <p class="singleline">{{event.company}}</p>
+		            <p class="singleline">{{event.place}}</p>
 		          </timeline-panel>
 		        </timeline-event>
     		</timeline>
 
 
 	  	</div>
-	  	<div class="col-xs-3" style="background-color: red;">
+	  	<div class="col-xs-3 blueback" id="fullpage">
 	  		three
 	  	</div>
 	</div>
