--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body ng-app="myApp" ng-controller="myCtrl">
   <div class="container-fluid">
    <div class="row">
-	<img src="/img/back.png" class="img-responsive">
+	<img src="/img/back.png" class=" col-xs-12 img-responsive">
    </div>
 </div>
     <div class="container">
