--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body ng-app="myApp" ng-controller="myCtrl">
   <div class="container-fluid">
    <div class="row">
-	<img src="/img/back.png" class=" col-xs-12 img-responsive">
+	<img src="img/back.png" class=" col-xs-12 img-responsive">
    </div>
 </div>
     <div class="container">
@@ -85,7 +85,7 @@
 	</div>
 	  <div class="container-fluid">
    <div class="row">
-	<img src="/img/back.png" class=" col-xs-12 img-responsive">
+	<img src="img/back.png" class=" col-xs-12 img-responsive">
    </div>
 	</div>
   </body>
