--- a/index.html
+++ b/index.html
@@ -1,93 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Tyche</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" media="all" href="css/bootstrap.min.css">
-  <link rel="stylesheet" media="all" href="css/custom.css">
-  <link rel="stylesheet" media="all" href="css/angular-timeline-animations.css">
-  <link rel="stylesheet" media="all" href="css/angular-timeline-bootstrap.css">
-  <link rel="stylesheet" media="all" href="css/angular-timeline.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <script src="js/jquery.min.js"></script>
-  <script src="js/jquery.plugin.html2canvas.js"></script>
-  <script src="js/html2canvas.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/angular.min.js"></script>
-  <script src="js/angular-timeline.js"></script>
-  <script src="controllers/app.controller.js"></script>
+    <title>Tyche</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" media="all" href="css/bootstrap.min.css">
+    <link rel="stylesheet" media="all" href="css/custom.css">
+    <link rel="stylesheet" media="all" href="css/angular-timeline-animations.css">
+    <link rel="stylesheet" media="all" href="css/angular-timeline-bootstrap.css">
+    <link rel="stylesheet" media="all" href="css/angular-timeline.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    
+    <script src="js/jquery.min.js"></script>
+	<script src="js/angular.min.js"></script>
+	<script src="js/angular-timeline.js"></script>
+    <script src="js/angular-ui-router.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+
+	<script src="controllers/main.controller.js"></script>
+	<script src="controllers/app.controller.js"></script>
+	<script src="states/states.js"></script>
+
 </head>
 
-
-  <body ng-app="myApp" ng-controller="myCtrl">
-  <div class="container-fluid">
-   <div class="row">
-	<img src="img/back.png" class=" col-xs-12 img-responsive">
-   </div>
-</div>
+<body ng-app="myApp" ng-controller="myCtrl">
+    <div class="container-fluid">
+        <div class="row">
+            <img src="img/back.png" class=" col-xs-12 img-responsive">
+        </div>
+    </div>
     <div class="container">
-	    	<div class="col-xs-9">
-				<H2>Luv  SINGH <small><br>Linux  and Web full stack developer</small></H2>
-			</div>
-	    	<div class="col-xs-3 blueback">
-			</div>
+        <div ui-view="content"></div>
+    </div>
 
-		<div class="col-xs-9" style="height:20px;">
-		</div>
-		<div class="col-xs-3 blueback" style="height:20px;">
-		</div>
-	</div>
-    <div class="container">
-    	<div ng-include="'fragments/info.html'">
-    	</div>
-	  	<!-- TWO -->
-	  	<div class="col-xs-5">
-	  		<timeline>
-		        <timeline-event ng-repeat="event in events" side="right">
-		          <timeline-badge class="{{event.badgeClass}}">
-		            <!-- <i class="glyphicon {{event.badgeIconClass}}"></i> -->
-		            <span>{{event.year}}</span>
-		          </timeline-badge>
-		          <timeline-panel class="{{event.badgeClass}}">
-		            <timeline-heading class="singleline">
-		              <h4>{{event.title}}</h4>
-		            </timeline-heading>
-		            <p class="singleline">{{event.company}}</p>
-		            <p class="singleline">{{event.place}}</p>
-		          </timeline-panel>
-		        </timeline-event>
-    		</timeline>
-			<div id="heightmarker2" class="heightmarker"></div>
-
-
-	  	</div>
-	  	<div class="col-xs-3 blueback" id="fullpage">
-	  		<H3><small>ABOUT ME</small></H3>
-	  		<p>With over 7 years of experience in different domains across organisations that are world leaders, I have recently upgraded my skill as a full stack web developer to add to my experience as an embedded Linux Engineer. I am looking for new opportunities and the areas of keen interest are machine learning, Internet of Things, AI.</p>
-
-	  		<br><br><br><br><br>
-	  		<br>
-	  		<br>
-	  		<br>
-	  		<br>
-	  		<br>
-	  		<br>
-	  		<br>
-	  		<H3><small>REFERENCES</small></H3>
-	  		<B>Randall Fields<B>
-	  		<B>Project manager at Qualcomm</B>
-	  		<p>some number</p>
-	  		<B>Ravi Dhanshetty<B>
-	  		<B>Team Lead at Dell</B>
-	  		<p>some number</p>
-	  	</div>
-	</div>
-	  <div class="container-fluid">
-   <div class="row">
-	<img src="img/back.png" class=" col-xs-12 img-responsive">
-   </div>
-	</div>
-  </body>
+    <div class="container-fluid">
+        <div class="row">
+            <img src="img/back.png" class=" col-xs-12 img-responsive">
+        </div>
+    </div>
+</body>
 
 </html>
