Fixes states for form and view

--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
     <script src="js/angular-ui-router.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
 
+    <script src="app.js"></script>
 	<script src="controllers/main.controller.js"></script>
 	<script src="controllers/app.controller.js"></script>
+	<script src="controllers/form.controller.js"></script>
 	<script src="states/states.js"></script>
 
 </head>
 
-<body ng-app="myApp" ng-controller="myCtrl">
+<body ng-app="myApp" ng-controller="mainCtrl">
     <div class="container-fluid">
         <div class="row">
             <img src="img/back.png" class=" col-xs-12 img-responsive">
