Adding form elements for user input

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
     <script src="app.js"></script>
 	<script src="controllers/main.controller.js"></script>
 	<script src="controllers/app.controller.js"></script>
-	<script src="controllers/form.controller.js"></script>
+    <script src="controllers/form.controller.js"></script>
+    <script src="services/storage.service.js"></script>
 	<script src="states/states.js"></script>
 
 </head>
